	(epackage-pkg-lint-info-file): Add verbose.
	(epackage-pkg-lint-git-branches): Rewrite.
	(epackage-url-retrieve-buffer): New.
	(epackage-url-save-to-file): New.
	(epackage-pkg-lint-package): New.
	(epackage--buffer-lint): New.
	(epackage-pkg-lint-dir-structure): Fix hadlling of file "info".
	(epackage--download-action-list): Add TYPE lint.
	(epackage-run-action-list): Add TYPE lint.

2010-12-15 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-cmd-download-action-depends-on): New.
	(epackage-cmd-download-action-depends-off): New.
	(epackage-cmd-download-action-depends-toggle): New.
	(epackage-combine-files): Save new content to `point-max'
	not `point-min'. This preserves file listing order.
	(epackage-cmd-download-action-activate-off): Add verbose.
	(epackage-cmd-download-action-activate-toggle): Add verbose.
	(epackage-cmd-download-action-autoload-on): Add verbose.
	(epackage-cmd-download-action-autoload-off): Add verbose.
	(epackage-cmd-download-action-autoload-toggle): Add verbose.
	(epackage-cmd-download-action-depends-on): Add verbose.
	(epackage-cmd-download-action-depends-off): Add verbose.
	(epackage-cmd-download-action-depends-toggle): Add verbose.
	(epackage-cmd-download-action-enable-on): Add verbose.
	(epackage-cmd-download-action-enable-off): Add verbose.
	(epackage-cmd-download-action-enable-toggle): Add verbose.
	(epackage-cmd-download-action-compile-on): Add verbose.
	(epackage-cmd-download-action-compile-off): Add verbose.
	(epackage-cmd-download-action-compile-toggle): Add verbose.
	(epackage-pkg-info-fetch-field-depends): New.
	(epackage-depends-parse-buffer-prepare): New.

2010-12-15 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-pkg-info-field-commentary): If
	value is empty, return nil.
	(epackage-batch-ui-display-package-documentation): Check
	if file is empty.
	(epackage-pkg-info-field-read): Remove.
	(epackage-pkg-info-field-commentary): Remove.
	(epackage-pkg-info-fetch-field): New.